# reflex-brick

./: .gitignore  .travis.yml  ChangeLog.md  README.md  default.nix  reflex-brick.cabal  reflex-brick.nix  shell.nix
examples/snake/: Main.hs
examples/testMe/: Main.hs
nix/: reflex-basic-host.json  reflex-basic-host.nix  reflex-platform.json  update.sh
src/Reflex/: Brick.hs
src/Reflex/Brick/: Events.hs  Types.hs
