name:                reflex-brick
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Brick
  build-depends:       base >=4.9 && <4.11
                     , reflex
                     , reflex-basic-host
                     , brick
                     , vty
                     , stm
                     , lens
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
