name:                reflex-brick
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Brick
                     , Reflex.Brick.Types
                     , Reflex.Brick.Events
  build-depends:       base              >=4.9 && <4.13
                     , brick             >= 0.37 && < 0.47
                     , bytestring        >= 0.10 && < 0.11
                     , dependent-map     >= 0.2.4 && < 0.3
                     , dependent-sum     >= 0.4 && < 0.5
                     , lens              >= 4.16 && < 4.18
                     , mtl               >= 2.2 && < 2.3
                     , reflex            >= 0.5 && < 0.6
                     , reflex-basic-host >= 0.1 && < 0.2
                     , stm               >= 2.5 && < 2.6
                     , vty               >= 5.21 && < 5.25
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable testMe
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , brick             >= 0.37 && < 0.47
                     , reflex            >= 0.5 && < 0.6
                     , vty               >= 5.21 && < 5.25
                     , reflex-brick
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      examples/testMe
  default-language:    Haskell2010

executable snake
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , brick             >= 0.37 && < 0.47
                     , containers        >= 0.5 && < 0.7
                     , lens              >= 4.16 && < 4.18
                     , linear            >= 1.20 && < 1.21
                     , mtl               >= 2.2 && < 2.3
                     , random            >= 1.1 && < 1.2
                     , reflex            >= 0.5 && < 0.6
                     , vty               >= 5.21 && < 5.25
                     , reflex-brick
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      examples/snake
  default-language:    Haskell2010
